clipped_groomer_article_fullpage.html

--- a/clipped_groomer_article_fullpage.html
+++ b/clipped_groomer_article_fullpage.html
@@ -34,6 +34,8 @@
       text-decoration: none;
       border-radius: 6px;
       font-weight: bold;
+      border: none;
+      cursor: pointer;
     }
     .back-link:hover {
       background: #333;
@@ -49,7 +51,7 @@
     <img src="https://tattootaxguys.github.io/The-Inkubator/pet_groomer_page_3.png" alt="pet_groomer_page_3.png"/>
     <img src="https://tattootaxguys.github.io/The-Inkubator/pet_groomer_page_4.png" alt="pet_groomer_page_4.png"/>
 
-    <a class="back-link" href="https://www.friedmantax.com">← Back to Website</a>
+    <button onclick="window.history.back()" class="back-link">⬅ Back to Previous Page</button>
   </div>
 </body>
 </html>
