clipped_groomer_article_fullpage.html

--- a/clipped_groomer_article_fullpage.html
+++ b/clipped_groomer_article_fullpage.html
@@ -63,7 +63,7 @@
   }
 </script>
 
-<a class="back-link" id="backBtn" href="#">← Back to Gallery</a>
+<a class="back-link" id="backBtn" href="#">← Back to Blogs</a>
 
   </div>
 </body>
