clipped_groomer_article_fullpage.html

--- a/clipped_groomer_article_fullpage.html
+++ b/clipped_groomer_article_fullpage.html
@@ -51,20 +51,16 @@
     <img src="https://tattootaxguys.github.io/The-Inkubator/pet_groomer_page_3.png" alt="pet_groomer_page_3.png"/>
     <img src="https://tattootaxguys.github.io/The-Inkubator/pet_groomer_page_4.png" alt="pet_groomer_page_4.png"/>
 
-    <script>
-  const params = new URLSearchParams(window.location.search);
-  const returnUrl = params.get("return");
-  const backBtn = document.getElementById("backBtn");
-
-  if (returnUrl) {
-    backBtn.href = returnUrl;
-  } else {
-    backBtn.href = "https://friedmantax.com";
-  }
-</script>
-
-<a class="back-link" id="backBtn" href="#">← Back to Blogs</a>
-
+    <a class="back-link" id="backBtn" href="#">← Back to Gallery</a>
   </div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const params = new URLSearchParams(window.location.search);
+      const returnUrl = params.get("return") || "https://friedmantax.com/blogs";
+      const backBtn = document.getElementById("backBtn");
+      backBtn.href = returnUrl;
+    });
+  </script>
 </body>
 </html>
