--- a/clipped_groomer_article_fullpage.html
+++ b/clipped_groomer_article_fullpage.html
@@ -1,66 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Clipped & Compliant - Full Article</title>
+  <meta charset="UTF-8">
+  <title>Clipped & Compliant</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      background-color: #111;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      padding: 40px 20px;
       margin: 0;
-      padding: 0;
-      background: #f8f8f8;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background: #fff;
+      color: #000;
+      padding: 30px;
+      border-radius: 10px;
+    }
+
+    h1, h2 {
       text-align: center;
     }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-      background: white;
-    }
+
     img {
-      width: 100%;
+      max-width: 100%;
       height: auto;
-      margin-bottom: 30px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      margin: 20px 0;
+      display: block;
     }
-    .back-link {
-      display: inline-block;
-      margin: 30px 0;
-      padding: 12px 24px;
-      background: #000;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
+
+    .back-button {
+      display: block;
+      width: fit-content;
+      margin: 0 auto 30px auto;
+      background-color: #facc15;
+      color: #000;
+      padding: 10px 20px;
+      border-radius: 25px;
       font-weight: bold;
-      border: none;
-      cursor: pointer;
-    }
-    .back-link:hover {
-      background: #333;
+      text-decoration: none;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Clipped & Compliant</h1>
-    <h3>Choosing the Right Business Structure for Pet Groomers</h3>
-    <img src="https://tattootaxguys.github.io/The-Inkubator/pet_groomer_page_1.png" alt="pet_groomer_page_1.png"/>
-    <img src="https://tattootaxguys.github.io/The-Inkubator/pet_groomer_page_2.png" alt="pet_groomer_page_2.png"/>
-    <img src="https://tattootaxguys.github.io/The-Inkubator/pet_groomer_page_3.png" alt="pet_groomer_page_3.png"/>
-    <img src="https://tattootaxguys.github.io/The-Inkubator/pet_groomer_page_4.png" alt="pet_groomer_page_4.png"/>
+  <!-- Top Back Button -->
+  <a class="back-button" href="https://friedmantax.com/blogs">← Back to Gallery</a>
 
-    <a class="back-link" id="backBtn" href="#">← Back to Gallery</a>
+  <h1>Clipped & Compliant</h1>
+  <h2>Choosing the Right Business Structure for Pet Groomers</h2>
+
+  <div class="container">
+    <h2>CLIPPED & COMPLIANT: CHOOSING THE RIGHT BUSINESS STRUCTURE FOR PET GROOMERS</h2>
+    <p>Every spring, four longtime friends—Harper, Zoey, Finn, and Layla—meet in Las Vegas for the National Pet Grooming Expo. Between seminars on coat conditioning and the latest in paw balm science, their favorite tradition is an annual dinner where talk inevitably shifts from poodles to profits and taxes.</p>
+    
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/clipped_page_1.png?raw=true" alt="Clipped Article Page 1">
+
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/clipped_page_2.png?raw=true" alt="Clipped Article Page 2">
+
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/clipped_page_3.png?raw=true" alt="Clipped Article Page 3">
   </div>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const params = new URLSearchParams(window.location.search);
-      const returnUrl = params.get("return") || "https://friedmantax.com/blogs";
-      const backBtn = document.getElementById("backBtn");
-      backBtn.href = returnUrl;
-    });
-  </script>
+  <!-- Bottom Back Button -->
+  <a class="back-button" href="https://friedmantax.com/blogs">← Back to Gallery</a>
 </body>
 </html>
