clipped_groomer_article_fullpage.html

--- a/clipped_groomer_article_fullpage.html
+++ b/clipped_groomer_article_fullpage.html
@@ -8,45 +8,58 @@
       background-color: #111;
       color: #fff;
       font-family: Arial, sans-serif;
-      padding: 40px 20px;
-      margin: 0;
+      text-align: center;
+      padding: 20px;
     }
 
     .container {
-      max-width: 800px;
+      max-width: 850px;
       margin: 0 auto;
-      background: #fff;
+      background-color: #fff;
       color: #000;
+      border-radius: 12px;
       padding: 30px;
-      border-radius: 10px;
     }
 
-    h1, h2 {
-      text-align: center;
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 10px;
     }
 
-    img {
-      max-width: 100%;
-      height: auto;
-      margin: 20px 0;
-      display: block;
+    h2 {
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: #222;
+      margin-bottom: 30px;
+    }
+
+    p {
+      text-align: left;
+      line-height: 1.6;
     }
 
     .back-button {
-      display: block;
-      width: fit-content;
-      margin: 0 auto 30px auto;
-      background-color: #facc15;
+      display: inline-block;
+      background-color: #FFD43B;
       color: #000;
       padding: 10px 20px;
-      border-radius: 25px;
+      border-radius: 30px;
       font-weight: bold;
       text-decoration: none;
-      text-align: center;
+      margin: 30px 0;
+    }
+
+    .article-image {
+      width: 100%;
+      max-width: 750px;
+      margin: 30px auto;
+      display: block;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
+
   <!-- Top Back Button -->
   <a class="back-button" href="https://friedmantax.com/blogs">← Back to Gallery</a>
 
@@ -54,17 +67,19 @@
   <h2>Choosing the Right Business Structure for Pet Groomers</h2>
 
   <div class="container">
-    <h2>CLIPPED & COMPLIANT: CHOOSING THE RIGHT BUSINESS STRUCTURE FOR PET GROOMERS</h2>
+    <h3>CLIPPED & COMPLIANT: CHOOSING THE RIGHT BUSINESS STRUCTURE FOR PET GROOMERS</h3>
+
     <p>Every spring, four longtime friends—Harper, Zoey, Finn, and Layla—meet in Las Vegas for the National Pet Grooming Expo. Between seminars on coat conditioning and the latest in paw balm science, their favorite tradition is an annual dinner where talk inevitably shifts from poodles to profits and taxes.</p>
-    
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/clipped_page_1.png?raw=true" alt="Clipped Article Page 1">
 
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/clipped_page_2.png?raw=true" alt="Clipped Article Page 2">
+    <!-- Article Pages -->
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_1.png?raw=true" alt="Clipped Article Page 1" class="article-image">
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_2.png?raw=true" alt="Clipped Article Page 2" class="article-image">
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_3.png?raw=true" alt="Clipped Article Page 3" class="article-image">
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_4.png?raw=true" alt="Clipped Article Page 4" class="article-image">
 
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/clipped_page_3.png?raw=true" alt="Clipped Article Page 3">
+    <!-- Bottom Back Button -->
+    <a class="back-button" href="https://friedmantax.com/blogs">← Back to Gallery</a>
   </div>
 
-  <!-- Bottom Back Button -->
-  <a class="back-button" href="https://friedmantax.com/blogs">← Back to Gallery</a>
 </body>
 </html>
