clipped_groomer_article_fullpage.html

--- a/clipped_groomer_article_fullpage.html
+++ b/clipped_groomer_article_fullpage.html
@@ -71,11 +71,11 @@
 
     <p>Every spring, four longtime friends—Harper, Zoey, Finn, and Layla—meet in Las Vegas for the National Pet Grooming Expo. Between seminars on coat conditioning and the latest in paw balm science, their favorite tradition is an annual dinner where talk inevitably shifts from poodles to profits and taxes.</p>
 
-    <!-- Article Pages -->
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_1.png?raw=true" alt="Clipped Article Page 1" class="article-image">
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_2.png?raw=true" alt="Clipped Article Page 2" class="article-image">
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_3.png?raw=true" alt="Clipped Article Page 3" class="article-image">
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_4.png?raw=true" alt="Clipped Article Page 4" class="article-image">
+    <!-- Correct Image Filenames -->
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_1.png?raw=true" alt="pet_groomer_page_1.png" class="article-image">
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_2.png?raw=true" alt="pet_groomer_page_2.png" class="article-image">
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_3.png?raw=true" alt="pet_groomer_page_3.png" class="article-image">
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_4.png?raw=true" alt="pet_groomer_page_4.png" class="article-image">
 
     <!-- Bottom Back Button -->
     <a class="back-button" href="https://friedmantax.com/blogs">← Back to Gallery</a>
