clipped_groomer_article_fullpage.html

--- a/clipped_groomer_article_fullpage.html
+++ b/clipped_groomer_article_fullpage.html
@@ -1,89 +1,80 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Clipped & Compliant</title>
-  <style>
-    body {
-      background-color: #111;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 850px;
-      margin: 40px auto;
-      padding: 30px;
-      background-color: #fff;
-      border-radius: 12px;
-      color: #000;
-    }
-    h1, h2 {
-      text-align: center;
-    }
-    h1 {
-      color: #fff;
-      margin-top: 40px;
-      font-size: 2em;
-    }
-    h2 {
-      color: #fff;
-      font-size: 1.25em;
-      margin-bottom: 20px;
-    }
-    .back-button {
-      display: block;
-      text-align: center;
-      margin: 20px auto;
-    }
-    .back-button a {
-      text-decoration: none;
-      background-color: #FFD700;
-      color: black;
-      padding: 10px 20px;
-      border-radius: 30px;
-      font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      transition: background-color 0.3s ease;
-    }
-    .back-button a:hover {
-      background-color: #e0c200;
-    }
-    .article-body {
-      font-size: 16px;
-      line-height: 1.6;
-    }
-    .article-body img {
-      width: 100%;
-      margin: 30px 0;
-      border-radius: 10px;
-    }
-  </style>
-</head>
-<body>
-  <div class="back-button">
-    <a href="https://friedmantax.com/blogs">← Back to Gallery</a>
-  </div>
+<style>
+  body {
+    background-color: #111;
+    color: #fff;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
 
-  <h1>Clipped & Compliant</h1>
-  <h2>Choosing the Right Business Structure for Pet Groomers</h2>
+  .container {
+    max-width: 850px;
+    margin: 40px auto;
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 12px;
+    color: #000;
+  }
 
-  <div class="container">
-    <h2>CLIPPED & COMPLIANT: CHOOSING THE RIGHT BUSINESS STRUCTURE FOR PET GROOMERS</h2>
+  h1, h2 {
+    text-align: center;
+    margin: 0;
+    padding: 10px 0;
+  }
 
-    <p class="article-body">
-      Every spring, four longtime friends—Harper, Zoey, Finn, and Layla—meet in Las Vegas for the National Pet Grooming Expo. Between seminars on coat conditioning and the latest in paw balm science, their favorite tradition is an annual dinner where talk inevitably shifts from poodles to profits and taxes.
-    </p>
+  h1 {
+    font-size: 28px;
+    color: #fff;
+  }
 
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_1.png?raw=true" alt="Page 1">
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_2.png?raw=true" alt="Page 2">
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_3.png?raw=true" alt="Page 3">
-    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_4.png?raw=true" alt="Page 4">
-  </div>
+  h2 {
+    font-size: 16px;
+    color: #fff;
+    font-weight: 600;
+  }
 
-  <div class="back-button">
-    <a href="https://friedmantax.com/blogs">← Back to Gallery</a>
-  </div>
-</body>
-</html>
+  .back-button {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+  }
+
+  .back-button a {
+    text-decoration: none;
+    background-color: #FFD700;
+    color: black;
+    padding: 10px 25px;
+    border-radius: 30px;
+    font-weight: bold;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    transition: background-color 0.3s ease;
+  }
+
+  .back-button a:hover {
+    background-color: #e0c200;
+  }
+
+  .article-body {
+    font-size: 15px;
+    line-height: 1.6;
+  }
+
+  .article-body p {
+    margin-bottom: 20px;
+  }
+
+  .article-body img {
+    width: 100%;
+    max-width: 700px;
+    display: block;
+    margin: 30px auto;
+    border-radius: 10px;
+  }
+
+  .article-title {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+</style>
