--- a/clipped_groomer_article_fullpage.html
+++ b/clipped_groomer_article_fullpage.html
@@ -1,80 +1,59 @@
-<style>
-  body {
-    background-color: #111;
-    color: #fff;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-
-  .container {
-    max-width: 850px;
-    margin: 40px auto;
-    padding: 30px;
-    background-color: #fff;
-    border-radius: 12px;
-    color: #000;
-  }
-
-  h1, h2 {
-    text-align: center;
-    margin: 0;
-    padding: 10px 0;
-  }
-
-  h1 {
-    font-size: 28px;
-    color: #fff;
-  }
-
-  h2 {
-    font-size: 16px;
-    color: #fff;
-    font-weight: 600;
-  }
-
-  .back-button {
-    display: flex;
-    justify-content: center;
-    margin: 20px 0;
-  }
-
-  .back-button a {
-    text-decoration: none;
-    background-color: #FFD700;
-    color: black;
-    padding: 10px 25px;
-    border-radius: 30px;
-    font-weight: bold;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    transition: background-color 0.3s ease;
-  }
-
-  .back-button a:hover {
-    background-color: #e0c200;
-  }
-
-  .article-body {
-    font-size: 15px;
-    line-height: 1.6;
-  }
-
-  .article-body p {
-    margin-bottom: 20px;
-  }
-
-  .article-body img {
-    width: 100%;
-    max-width: 700px;
-    display: block;
-    margin: 30px auto;
-    border-radius: 10px;
-  }
-
-  .article-title {
-    font-size: 18px;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Clipped & Compliant</title>
+  <style>
+    body {
+      background-color: #111;
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      color: white;
+      text-align: center;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 15px 60px;
+    }
+    .container img {
+      width: 100%;
+      height: auto;
+      margin-bottom: 25px;
+      border-radius: 8px;
+    }
+    .back-button {
+      display: inline-block;
+      margin-bottom: 35px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #f2c744;
+      color: #111;
+      border: none;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.2s ease-in-out;
+    }
+    .back-button:hover {
+      background-color: #ffd700;
+    }
+    h1 {
+      font-size: 26px;
+      margin-bottom: 30px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
+    <h1>Clipped & Compliant: Choosing the Right Business Structure for Pet Groomers</h1>
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_1.png?raw=true" alt="Page 1" />
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_2.png?raw=true" alt="Page 2" />
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_3.png?raw=true" alt="Page 3" />
+    <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_4.png?raw=true" alt="Page 4" />
+  </div>
+</body>
+</html>
