clipped_groomer_article_fullpage.html

--- a/clipped_groomer_article_fullpage.html
+++ b/clipped_groomer_article_fullpage.html
@@ -26,7 +26,7 @@
     }
     .back-button {
       display: inline-block;
-      margin-bottom: 35px;
+      margin: 35px 0;
       padding: 10px 20px;
       font-size: 16px;
       background-color: #f2c744;
@@ -54,6 +54,7 @@
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_2.png?raw=true" alt="Page 2" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_3.png?raw=true" alt="Page 3" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_4.png?raw=true" alt="Page 4" />
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
   </div>
 </body>
 </html>
