--- a/hairstylist_article_fullpage.html
+++ b/hairstylist_article_fullpage.html
@@ -49,7 +49,7 @@
 <body>
   <div class="container">
     <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
-    <h1>The 2024 Tax Survival Guide for Hair Stylists, Barbers, and Salon Owners</h1>
+    <h1>The 2024 Tax Survival Guide for Hair Stylists,<br />Barbers, and Salon Owners</h1>
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_1.png?raw=true" alt="Page 1" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_2.png?raw=true" alt="Page 2" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_3.png?raw=true" alt="Page 3" />
