--- a/hairstylist_article_fullpage.html
+++ b/hairstylist_article_fullpage.html
@@ -26,7 +26,7 @@
     }
     .back-button {
       display: inline-block;
-      margin-bottom: 35px;
+      margin: 35px; 0;
       padding: 10px 20px;
       font-size: 16px;
       background-color: #f2c744;
