--- a/hairstylist_article_fullpage.html
+++ b/hairstylist_article_fullpage.html
@@ -26,7 +26,7 @@
     }
     .back-button {
       display: inline-block;
-      margin: 35px; 0;
+      margin: 35px 0;
       padding: 10px 20px;
       font-size: 16px;
       background-color: #f2c744;
@@ -43,6 +43,7 @@
     h1 {
       font-size: 26px;
       margin-bottom: 30px;
+      line-height: 1.4;
     }
   </style>
 </head>
