hairstylist_article_fullpage.html

--- a/hairstylist_article_fullpage.html
+++ b/hairstylist_article_fullpage.html
@@ -56,6 +56,7 @@
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_3.png?raw=true" alt="Page 3" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_4.png?raw=true" alt="Page 4" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_5.png?raw=true" alt="Page 5" />
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
   </div>
 </body>
 </html>
