clipped_groomer_article_fullpage.html

--- a/clipped_groomer_article_fullpage.html
+++ b/clipped_groomer_article_fullpage.html
@@ -49,13 +49,13 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Blogs</a>
     <h1>Clipped & Compliant: Choosing the Right<br />Business Structure for Pet Groomers</h1>
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_1.png?raw=true" alt="Page 1" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_2.png?raw=true" alt="Page 2" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_3.png?raw=true" alt="Page 3" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/pet_groomer_page_4.png?raw=true" alt="Page 4" />
-    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Blogs</a>
   </div>
 </body>
 </html>
