hairstylist_article_fullpage.html

--- a/hairstylist_article_fullpage.html
+++ b/hairstylist_article_fullpage.html
@@ -49,14 +49,14 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Blogs</a>
     <h1>The 2024 Tax Survival Guide for<br />Hair Stylists, Barbers, and Salon Owners</h1>
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_1.png?raw=true" alt="Page 1" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_2.png?raw=true" alt="Page 2" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_3.png?raw=true" alt="Page 3" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_4.png?raw=true" alt="Page 4" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/hairstylist_page_5.png?raw=true" alt="Page 5" />
-    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Blogs</a>
   </div>
 </body>
 </html>
