piercer_retirement_article_fullpage.html

--- a/piercer_retirement_article_fullpage.html
+++ b/piercer_retirement_article_fullpage.html
@@ -48,7 +48,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Blogs</a>
 
     <h1>Crafting Your Financial Future: Retirement Options for Self-Employed Body Piercers and Studio Owners</h1>
 
@@ -63,7 +63,7 @@
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/piercer_retirement_page_9.png?raw=true" alt="Page 9" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/piercer_retirement_page_10.png?raw=true" alt="Page 10" />
 
-    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Blogs</a>
   </div>
 </body>
 </html>
