tattoo_health_article_fullpage.html

--- a/tattoo_health_article_fullpage.html
+++ b/tattoo_health_article_fullpage.html
@@ -48,7 +48,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Blogs</a>
     
     <h1>Health Insurance for Self-Employed Tattoo Artists</h1>
 
@@ -59,7 +59,7 @@
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/tattoo_health_page_5.png?raw=true" alt="Page 5" />
     <img src="https://github.com/TattooTaxGuys/The-Inkubator/blob/main/tattoo_health_page_6.png?raw=true" alt="Page 6" />
 
-    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Gallery</a>
+    <a href="https://friedmantax.com/blogs" class="back-button">← Back to Blogs</a>
   </div>
 </body>
 </html>
